refactor: compose SerDes through string stages